tests/machine/x/c/fun_expr_in_let.error
line: 0
error: output mismatch
-- got --
1.011846442682873e-320
-- want --
36
   1: #include <stdio.h>
